--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/tailwindcss": "^2.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "stylelint-config-recommended": "^3.0.0"
   }
 }
