--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/amp": "^0.3.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "prism-themes": "^1.4.0"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
