--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
     "serve": "nuxt generate && firebase serve --only hosting"
   },
   "dependencies": {
-    "@nuxt/content": "^1.5.0",
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/amp": "^0.3.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0",
-    "prism-themes": "^1.4.0"
+    "@nuxtjs/pwa": "^3.3.5",
+    "nuxt": "^2.15.7",
+    "prism-themes": "^1.8.0"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^2.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
-    "stylelint-config-recommended": "^3.0.0"
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/jit": "^0.1.18",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "stylelint-config-recommended": "^5.0.0",
+    "tailwindcss": "^2.2.7"
   }
 }
