--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "prettier": "^2.3.2",
     "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "^2.2.7"
+  },
+  "volta": {
+    "node": "16.15.1"
   }
 }
