途中経過まで

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write . --ignore-path \".gitignore\""
   },
   "dependencies": {
     "next": "12.2.5",
