--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "12.2.5",
+    "next-seo": "^5.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.1.1",
+    "rehype-slug": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "18.7.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
